--- a/src/app/components/create-user-dialog/create-user-dialog.component.html
+++ b/src/app/components/create-user-dialog/create-user-dialog.component.html
@@ -1,16 +1,27 @@
-<h2 mat-dialog-title>New User</h2>
+<h2 mat-dialog-title class="dialog-title">New User</h2>
 <mat-dialog-content class="dialog-content">
   <form [formGroup]="userFormGroup">
-    <label for="name">Name: </label>
-    <input class="form-input" id="name" type="text" formControlName="name" />
+    <div class="form-input">
+      <label for="name">Name: </label>
+      <input id="name" type="text" formControlName="name" />
+    </div>
 
-    <label for="email">Email: </label>
-    <input class="form-input" id="email" type="text" formControlName="email" />
+    <div class="form-input">
+      <label for="email">Email: </label>
+      <input id="email" type="text" formControlName="email" />
+    </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
+  <button mat-button (click)="close()">Cancel</button>
+  <button
+    mat-button
+    [disabled]="!userFormGroup.valid"
+    color="primary"
+    (click)="save()"
+  >
+    Save
+  </button>
 </mat-dialog-actions>
 
 <!-- Copyright 2023 Google LLC. All Rights Reserved.
