--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,5 +1,12 @@
 <h1>Users List</h1>
 
+<input
+  type="text"
+  [(ngModel)]="query"
+  (ngModelChange)="inputChanged($event)"
+  placeholder="Search"
+/>
+
 <button mat-raised-button (click)="createUser()">Create User</button>
 
 <section>
