--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,13 +1,16 @@
 <h1>Users List</h1>
 
-<input
-  type="text"
-  [(ngModel)]="query"
-  (ngModelChange)="inputChanged($event)"
-  placeholder="Search"
-/>
+<div class="container">
+  <input
+    class="search-input"
+    type="text"
+    [(ngModel)]="query"
+    (ngModelChange)="inputChanged($event)"
+    placeholder="Search"
+  />
 
-<button mat-raised-button (click)="createUser()">Create User</button>
+  <button mat-raised-button (click)="createUser()">Create User</button>
+</div>
 
 <section>
   <div *ngFor="let user of users$ | async">
