--- a/src/app/components/users-list/users-list.component.scss
+++ b/src/app/components/users-list/users-list.component.scss
@@ -5,8 +5,13 @@
 }
 
 .search-input {
-  padding: 5px;
+  padding: 8px;
   display: flex;
   flex: 1;
+  margin: 5px 10px;
+  border-radius: 5px;
+}
+
+.users-list {
   margin: 5px 10px;
 }
