--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,12 +1,10 @@
-<mat-tab-group>
-  <mat-tab>
-    <ng-template mat-tab-label> Profile </ng-template>
-    <div>Name: {{ user.name }}</div>
-    <div>Email: {{ user.email }}</div>
-  </mat-tab>
-
-  <mat-tab>
-    <ng-template mat-tab-label> History </ng-template>
-    History Tab Content
-  </mat-tab>
-</mat-tab-group>
+<ul class="nav nav-tabs">
+  <li
+    *ngFor="let tab of tabs"
+    (click)="selectTab(tab)"
+    [class.active]="tab.active"
+  >
+    <a href="#">{{ tab.title }}</a>
+  </li>
+</ul>
+<ng-content></ng-content>
