--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -21,3 +21,8 @@
 </mat-chip-listbox>
 
 <app-user-profile *ngIf="selectedUser" [user]="selectedUser"></app-user-profile>
+
+<app-user-profile>
+  <app-tab [tabTitle]="'Tab 1'"> Tab 1 content </app-tab>
+  <app-tab tabTitle="Tab 2"> Tab 2 content </app-tab>
+</app-user-profile>
