--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -2,9 +2,10 @@
   <li
     *ngFor="let tab of tabs"
     (click)="selectTab(tab)"
+    class="nav-item"
     [class.active]="tab.active"
   >
-    <a href="#">{{ tab.title }}</a>
+    <a class="nav-link" href="#">{{ tab.title }}</a>
   </li>
 </ul>
 <ng-content></ng-content>
